更新至报丧女妖

--- a/角色行动顺序表.md
+++ b/角色行动顺序表.md
@@ -76,6 +76,7 @@
 | <img src="https://clocktower-wiki.gstonegames.com/images/thumb/0/0a/Leviathan.png/180px-Leviathan.png" width="50%"> | 利维坦 | 恶魔 | 实验性角色 | 12800 | <img src="https://clocktower-wiki.gstonegames.com/images/thumb/2/2d/Plaguedoctor.png/240px-Plaguedoctor.png" width="50%"> | 瘟疫医生 | 外来者 | 实验性角色 | 10000 |
 | <img src="https://clocktower-wiki.gstonegames.com/images/thumb/0/09/Vizier.png/240px-Vizier.png" width="50%"> | 维齐尔 | 爪牙 | 实验性角色 | 12900 | <img src="https://clocktower-wiki.gstonegames.com/images/thumb/f/f3/Choirboy.png/180px-Choirboy.png" width="50%"> | 唱诗男孩 | 镇民 | 实验性角色 | 10200 |
 | | | | | | <img src="https://clocktower-wiki.gstonegames.com/images/thumb/3/3d/Farmer.png/180px-Farmer.png" width="50%"> | 农夫 | 镇民 | 实验性角色 | 10300 |
+| | | | | | <img src="https://clocktower-wiki.gstonegames.com/images/thumb/d/d3/Banshee.png/400px-Banshee.png" width="50%"> | 报丧女妖 | 镇民 | 实验性角色 | 10400 |
 | | | | | | <img src="https://clocktower-wiki.gstonegames.com/images/thumb/b/b1/Professor.png/180px-Professor.png" width="50%"> | 教授 | 镇民 | 黯月初升 | 10500 |
 | | | | | | <img src="https://clocktower-wiki.gstonegames.com/images/thumb/7/75/Huntsman.png/180px-Huntsman.png" width="50%"> | 巡山人 | 镇民 | 实验性角色 | 10900 |
 | | | | | | <img src="https://clocktower-wiki.gstonegames.com/images/thumb/4/4e/Empath.png/180px-Empath.png" width="50%"> | 共情者 | 镇民 | 暗流涌动 | 11000 |
